--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -4,6 +4,7 @@
   "description_placeholder": "Describe your %s",
   "item_added_notification": "%s added %s %s to %s",
   "page_not_found": "Sorry, we couldn't find a page at this address.",
+  "subject_source_id": "subject-source-id",
   "submitted_by": "Submitted by <span class='author'>%s</span> on <span class='date'>%s</span>.",
   "title_placeholder": "Name your %s",
   "url_placeholder": "Specify the URL"
