Get data from Sonar. Upgrade to Meteor 1.2.

--- a/lib/i18n/nl.i18n.json
+++ b/lib/i18n/nl.i18n.json
@@ -12,6 +12,7 @@
   "subject": "subject",
   "Subjects": "Subjecten",
   "Mark all notifications as read": "Markeer alle meldingen als gelezen",
+  "Metrics": "Metrieken",
   "New project": "Nieuw project",
   "No notifications": "Geen meldingen",
   "Notifications": "Meldingen",
