--- a/lib/i18n/nl.i18n.json
+++ b/lib/i18n/nl.i18n.json
@@ -35,10 +35,12 @@
   "Select project members": "Selectie van projectleden",
   "Select sources": "Selectie van bronnen",
   "source": "bron",
+  "Source": "Bron",
   "Sources": "Bronnen",
   "subject": "subject",
   "Subjects": "Subjecten",
   "subject_source_id": "Subject-bron-id",
+  "Subject-source-id": "Subject-bron-id",
   "Submit": "Voeg toe",
   "submitted_by": "Ingevoerd door <span class='author'>%s</span> op <span class='date'>%s</span>.",
   "Title": "Titel",
