--- a/lib/i18n/nl.i18n.json
+++ b/lib/i18n/nl.i18n.json
@@ -7,6 +7,7 @@
   "Description": "Beschrijving",
   "description_placeholder": "Beschrijving van uw %s",
   "Edit": "Bewerk",
+  "Id of %s in %s": "Id van %s in %s",
   "If this is your first time here, join by creating an account":
     "Als u hier voor het eerst bent, maak dan een account aan",
   "item_added_notification": "%s voegde %s %s toe aan %s",
@@ -14,6 +15,7 @@
     "Items kunnen met drag en drop van volgorde worden veranderd",
   "last_updated_on": "Voor het laatst bijgewerkt op <span class='date'>%s</span>.",
   "Mark all notifications as read": "Markeer alle meldingen als gelezen",
+  "Measurements": "Metingen",
   "Metrics": "Metrieken",
   "New project": "Nieuw project",
   "No notifications": "Geen meldingen",
@@ -39,10 +41,13 @@
   "Sources": "Bronnen",
   "subject": "subject",
   "Subjects": "Subjecten",
+  "Subject-metrics": "Subject-metrieken",
   "subject_source_id": "Subject-bron-id",
   "Subject-source-id": "Subject-bron-id",
+  "Subject-source-ids": "Subject-bron-ids",
   "Submit": "Voeg toe",
   "submitted_by": "Ingevoerd door <span class='author'>%s</span> op <span class='date'>%s</span>.",
+  "Target": "Doelwaarde",
   "Title": "Titel",
   "title_placeholder": "Titel van uw %s",
   "url_placeholder": "Specificeer de URL",
