--- a/lib/i18n/nl.i18n.json
+++ b/lib/i18n/nl.i18n.json
@@ -22,6 +22,7 @@
   "Notifications": "Meldingen",
   "Open": "Open",
   "page_not_found": "Sorry, we konden geen pagina vinden op dit adres.",
+  "Password": "Wachtwoord",
   "Please create a project or have another user add you to one of theirs":
     "Maak een project of vraag een andere gebruiker u toe te voegen aan één van hun projecten",
   "Please provide a title": "Vul een titel in",
@@ -51,6 +52,7 @@
   "Title": "Titel",
   "title_placeholder": "Titel van uw %s",
   "url_placeholder": "Specificeer de URL",
+  "Username": "Gebruikersnaam",
   "Welcome!": "Welkom!",
   "You have no projects": "U heeft geen projecten",
   "You need to add sources before you can generate a report":
